# haskell-data-analysis

./: README.md
myfirstapp/: myfirstapp.cabal
myfirstapp/app/: Main.hs
week01/: project-week01.cabal
week01/app/: Demo.hs  Main.hs
week01/data/: ADA-USD.csv  ETH-USD.csv  SOL-USD.csv  all_week.csv  coins.sqlite3  earthquakes.csv  usgs.sqlite3
week01/src/: DescriptiveStats.hs  MyCSV.hs
