cabal-version:      2.4
name:               project-week01
version:            0.1.0.0
License:            Apache-2.0
author:             Hud Wahab
maintainer:         hudwahab@gmail.com
copyright:          © 2021 Hud Wahab 

library
  hs-source-dirs:     src
  exposed-modules:    DescriptiveStats
--   other-modules:      []
  build-depends:      base ^>=4.14.1.0
                    , csv
                    , HDBC >=2.4 && <3.0
                    , HDBC-sqlite3 >= 2.3.3.1
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror
--   ghc-options:       -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable example-app
    default-language:   Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:    Demo
    build-depends:    base ^>=4.14.1.0
                    , csv
    
    ghc-options:      -Wall

-- executable earthquakes
--     main-is:          earthquakes.hs
--     build-depends:    base ^>=4.14.1.0
--                     , csv
--     hs-source-dirs:   app
--     default-language: Haskell2010
--     ghc-options:      -Wall
